# limtrack

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.vps  LICENSE  README.md  ROADMAP.md  Readme  Readme.md  docker-compose.yml  licence.md  odoio.paw
.github/: FUNDING.yml
.sqlx/: query-020d14e07de5ad0577d3bcf9319c24fa405035bf4ebce6d43dee06466526dd94.json  query-20975432463d69a8f71e3e9ad4e120835cc9e19fe170737a024fc2e00e2f1039.json  query-2213b21dd68aac36255b81ed34dd8928efd356f9bf1d89188fb7c1e15d32d3e4.json  query-29d6b144c1876394742b09e6ffb9a4f62bb20e967f375c9b5ec84242289b64a5.json  query-386324942a0d956fe299a405bdd1803ce4ac84be6e6d3967e7f518e05aea61d8.json  query-49b948e4b4676a32327e80c0b374190b5601129a226b00ca0cb8d59cb43550d2.json  query-4b7c52de9fcf10156537f25c5ee96dacf80b2298330ee674b92da737263a817c.json  query-52c7093cde8e1e20c2a02d1a48c7ed30ca7a587310ca6de97436399283387e1b.json  query-667e16a80e9689532d4e75a2e3538b3a5884be237c012e769690efff4acaaa7f.json  query-8082ec2ccd1b810d2d828c19ce44ef870dcae293154e6916208f340153b0e458.json  query-8c203ad27291c23d29f4520e1dfa088c3c46a4aa4defb0ec4877030bfe4cab9b.json  query-8db5d5a25b84d8f1d3f1cf631562dd5fcc2bcf9c9ebaec9b1cd2873f41a325f0.json  query-99780f04ed8bbf8d29d371444aec04d7686ccf643b576fef7014d96d8e97d49e.json  query-9cc4b98cd80d7e3f7c44aa3ccca2ea9046e4b9f3cdefecce418475ce8d79f627.json  query-ba8572b2606ac9dfcf2c464d4f67af682bfb5e29c878c3395b98387da13a296b.json  query-d6f66cc7386b78cfba0b41f0ab1c5e0ca56cbf18a6448a37ec77034112946aa7.json  query-dad80262f0f869e25d86def0057f31faeccfbaca28cbb4daea876af608d65ef5.json  query-e4fccbd9303d1172bdc930d94e1f2cc4cd23a87bca29d7a677ed82d7ab489df7.json  (+1 more)
backend/: Cargo.toml
backend/.sqlx/: query-01e15d7aef779bb00374ad2a64146bca539397ad59ae155c4bdc17f078769169.json  query-0303f06cc72f262c15344665607e743081fd3ea5a2e5b150647dd0aa97e4617f.json  query-0713082202deb1a431603cea15d7ea835b504e11e5aa30eb305ce28f86754ecc.json  query-073a556645265cd1bca0f043f20e2c71a9642bbb75e3d81e1aeb92488693f3a7.json  query-0776cc44ad87e10b60a9d56247aa3b4915a7b650a4c12eadb917478f5660175e.json  query-0a434ac99f9886050c0fb19b216c5aaf8e9cf7de4571f147616543435670dc10.json  query-0e01a28dedbdc691ec78b1935721ca224fd2312bc6bba181ca2f8d5eab3da829.json  query-0ec0d6cf0d8a4de8fb2778d887ea9d404b54d8ce45b038f95d8485010c51ceaa.json  query-0efdd1b68c6194258b2986f73f23df640f5b2297e08c6eb0623835b621c4dd11.json  query-117b7eaa4ac40354ae529ba1a9c5f428f21e13c72e03317081221e9fcff705b8.json  query-128e9c74e5be5334ded266cdc950359b7f4860968128be09ce219adb68796623.json  query-12fee5a78ef637d4be0f195f8a82f042538f1fe2fa207350439304c35b3e5aea.json  query-137ea30b8e5934ef314e5604d32d79f74355bbb95eebbe5b12030de79b2a4ee8.json  query-152f7382cbb7a951fc244bffae26d36bc6ea968853eb30e2d1b80825e97a5530.json  query-1610e036b4d44edd58afb3995161f3c1c7235d5b8b92fc6c97871c43bc6f55ef.json  query-18cdedf45876ae008b6cedbb26dfbbd00f9a8570c2f68bf45120ae6f1be9bd1a.json  query-1958fd9cab554c7c75dde6e81287fe96a7f8bbefd73e4948eca840c68b104302.json  query-1d07995723974b3d9cc95059b136a40d68a612628e33ffc8240f6768a65c9b6f.json  query-1e06540ebc3480ff0966ecd00e69c238a0587be5ed3751314672e7ddb1b1fe84.json  query-225237b39e912a79c8cf32c5858cf075a7e508c9c7846988a4ec381029947be6.json  query-2530394b507104b997655c997ba33a91f5c72dc0120d44f56729d61f815d3262.json  query-2676903783a271666aad4eda1d9c76f0696eb243e5b3971b069d7d9e93d96162.json  query-2b6d57a2ed69ef1f5f6f2467e2c426e4a9cf473158a5955405443e6bb9767af7.json  query-2bf8fefac30eaeea3569faec50a19cbf21e373564aae9971c21e1fae184b7a6f.json  query-2c4f9d99d9db7443c5e6da804ebe4a2f75b7bfde1466fa26165defa489784d25.json  query-30caa3d7edcb789e0101bf7929bcc44df0a706a0bddc18c65be92da25df2d6ff.json  query-30f5d58814cd3eadcd1801c7975d75c019ef188eff6f55c5024b56791565deb5.json  query-317a51e4ab0932d6999d3aca5724516c5e36db38ddaf550f42b8e5519a003b56.json  query-33bc6d98ca621f806ba8f23004bf1ebe2a05d055b26b6866ad9816303b811451.json  query-34693be147f6903d59775b8633274de12ce942b5963348d095ec5ad17a7e0d22.json  query-3504905cf6ec711e929dae721ae4fd8bdd45c24fc84c8b0f36059a9556178183.json  query-35abe428c5d1c26d1ad5a260b9cdd11db444fb94d0e03916cec7b68c27980e26.json  query-35c1b927072f92e2da8984e2245980895dd14e423ece71d43dc515460b1e7bc6.json  query-3c6e53895e25dde0231441b15cba693a33d1d8f67dba896db22a3cf517a6ca8f.json  query-3c705f8b466da0c263dd34d7dbe6b94da209c02c95cdc033de5b10f2b5c1b4c9.json  query-3ea4d65a09ff68a0bf140eab6f01e0342e73d3fb5fcee5cb1f089474f0f2071a.json  query-42365021d50b63d45663fe25c4369ab4a5cb1faf5ded2a1b17533a759e31e576.json  query-42c033170696c940a95a7871a31c2764d937da5caa222aeb747b40d531f86636.json  query-46a90c78c6931945f0d1a985804813a3f2e7a58d5e5461cfa1eaab5c44338e40.json  query-49e129d4d24bd41e0b4c4b794720c322bb64f4583009cff531edf7eb877d0414.json  (+110 more)
backend/src/: admin_handler.rs  broadcast_handler.rs  company_handler.rs  contracts_handler.rs  handlers.rs  ios_handler.rs  lib.rs  license_handler.rs  license_middleware.rs  main.rs  mileage_handler.rs  notifier.rs  request_license_handler.rs  secrets.rs  share_handler.rs  state.rs  user_handler.rs  vehicles_handler.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json
frontend/public/: _redirects  manifest.json
frontend/src/: api_client.rs  config.rs  main.rs
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: add_vehicle_button.rs  broadcast_banner.rs  join_vehicle_button.rs  mod.rs  notification_bell.rs  ui.rs  vehicle.rs  vehicle_dashboard.rs  vehicle_detail.rs  vehicle_header.rs  vehicle_list.rs
frontend/src/components/contracts/: contract_list.rs  contract_widget.rs  mod.rs
frontend/src/components/mileage/: mileage_list.rs  mileage_widget.rs  mod.rs
frontend/src/models/: mod.rs  vehicle.rs
frontend/src/pages/: about.rs  admin.rs  fleet.rs  forgot_password.rs  home.rs  login.rs  mainpage.rs  mod.rs  privacy.rs  profile.rs  register.rs  request_license.rs  reset_password.rs  support.rs
frontend/style/: input.css  output.css
(+34 files in other folders)
