[workspace]
resolver = "2"
members = ["backend", "frontend", "common", "frontend/src-tauri"]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["thierry.soulie@tsodev.fr"]
repository = "https://github.com/TSODev/limtrack"
description = "Gestion de flotte kilométrique — contrats LOA, assurance et relevés"
license = "AGPL-3.0"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = [
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
] }
uuid = { version = "1.7", features = ["serde", "v4"] }
bcrypt = "0.15"
zxcvbn = "3"
sha2 = "0.10"
regex = "1"
rand = "0.8"

# --- Backend ---
axum = { version = "0.7", features = ["macros"] }
jsonwebtoken = "9.2"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- Frontend (Leptos) ---
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }

# --- Shared ---
common = { path = "./common" }
