[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "gen-tokens"
path = "src/bin/gen_tokens.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../common", features = ["backend"] }
jsonwebtoken.workspace = true
dotenvy.workspace = true
tracing.workspace = true
uuid = { workspace = true }
bcrypt = { workspace = true }
zxcvbn = { workspace = true }
sha2 = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
