[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "gen-tokens"
path = "src/bin/gen_tokens.rs"

[[bin]]
name = "assign-license"
path = "src/bin/assign_license.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../common", features = ["backend"] }
jsonwebtoken.workspace = true
dotenvy.workspace = true
tracing.workspace = true
uuid = { workspace = true }
bcrypt = { workspace = true }
zxcvbn = { workspace = true }
sha2 = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
csv = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }

[[bin]]
name = "notify-expiry"
path = "src/bin/notify_expiry.rs"

[[bin]]
name = "send-broadcast"
path = "src/bin/send_broadcast.rs"
